syntax = "proto3";

package quickstart3.pcbook;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

service LaptopService {
  rpc DetailLaptop(LaptopRequest) returns(Laptop) {}
}

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
}

message LaptopRequest {
  string id = 1;
}